syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__path__tests__it_matches_empty_generic_args.snap
---
source: syn-state-machine/src/common_tokens/path.rs
expression: "crate::parse::<GenericArgs<Infallible>>(::quote::quote! { < > })"
---
Ok(
    (
        GenericArgs(
            [],
        ),
        0,
    ),
)
