syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__path__tests__it_matches_expr_path.snap
---
source: syn-state-machine/src/common_tokens/path.rs
expression: "crate::parse::<PathInExpression>(::quote::quote! {\n            usize :: hello :: < Hello, World >\n        })"
---
Ok(
    (
        PathInExpression {
            leading: false,
            segments: [
                PathExprSegment(
                    Id(
                        Ident(
                            usize,
                        ),
                    ),
                    None,
                ),
                PathExprSegment(
                    Id(
                        Ident(
                            hello,
                        ),
                    ),
                    Some(
                        GenericArgs(
                            [
                                Type(
                                    NoBounds(
                                        TypePath(
                                            TypePath {
                                                leading: false,
                                                segments: [
                                                    Simple {
                                                        id: Id(
                                                            Ident(
                                                                Hello,
                                                            ),
                                                        ),
                                                    },
                                                ],
                                            },
                                        ),
                                    ),
                                ),
                                Type(
                                    NoBounds(
                                        TypePath(
                                            TypePath {
                                                leading: false,
                                                segments: [
                                                    Simple {
                                                        id: Id(
                                                            Ident(
                                                                World,
                                                            ),
                                                        ),
                                                    },
                                                ],
                                            },
                                        ),
                                    ),
                                ),
                            ],
                        ),
                    ),
                ),
            ],
        },
        0,
    ),
)
