syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__path__tests__it_matches_hello_world.snap
---
source: syn-state-machine/src/common_tokens/path.rs
expression: "crate::parse::<TypePath<Infallible>>(::quote::quote! { hello :: world })"
---
Ok(
    (
        TypePath {
            leading: false,
            segments: [
                Simple {
                    id: Id(
                        Ident(
                            hello,
                        ),
                    ),
                },
                Simple {
                    id: Id(
                        Ident(
                            world,
                        ),
                    ),
                },
            ],
        },
        0,
    ),
)
