syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__path__tests__it_matches_hello_world_hi.snap
---
source: syn-state-machine/src/common_tokens/path.rs
expression: "crate::parse::<TypePath>(::quote::quote! { hello :: world :: hi })"
---
Ok(
    (
        TypePath {
            leading: false,
            segments: [
                Simple {
                    id: Id(
                        Ident(
                            hello,
                        ),
                    ),
                },
                Simple {
                    id: Id(
                        Ident(
                            world,
                        ),
                    ),
                },
                Simple {
                    id: Id(
                        Ident(
                            hi,
                        ),
                    ),
                },
            ],
        },
        0,
    ),
)
