syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__path__tests__it_matches_multi_args.snap
---
source: syn-state-machine/src/common_tokens/path.rs
expression: "crate::parse::<GenericArgs>(::quote::quote! { < 'a, T, hello :: world > })"
---
Ok(
    (
        GenericArgs(
            [
                Lifetime(
                    Lifetime(
                        Ident(
                            a,
                        ),
                    ),
                ),
                Type(
                    NoBounds(
                        TypePath(
                            TypePath {
                                leading: false,
                                segments: [
                                    Simple {
                                        id: Id(
                                            Ident(
                                                T,
                                            ),
                                        ),
                                    },
                                ],
                            },
                        ),
                    ),
                ),
                Type(
                    NoBounds(
                        TypePath(
                            TypePath {
                                leading: false,
                                segments: [
                                    Simple {
                                        id: Id(
                                            Ident(
                                                hello,
                                            ),
                                        ),
                                    },
                                    Simple {
                                        id: Id(
                                            Ident(
                                                world,
                                            ),
                                        ),
                                    },
                                ],
                            },
                        ),
                    ),
                ),
            ],
        ),
        0,
    ),
)
