syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__path__tests__it_matches_pathed_args.snap
---
source: syn-state-machine/src/common_tokens/path.rs
expression: "crate::parse::<GenericArgs<Infallible>>(::quote::quote! {\n            < hello :: world >\n        })"
---
Ok(
    (
        GenericArgs(
            [
                Type(
                    NoBounds(
                        TypePath(
                            TypePath {
                                leading: false,
                                segments: [
                                    Simple {
                                        id: Id(
                                            Ident(
                                                hello,
                                            ),
                                        ),
                                    },
                                    Simple {
                                        id: Id(
                                            Ident(
                                                world,
                                            ),
                                        ),
                                    },
                                ],
                            },
                        ),
                    ),
                ),
            ],
        ),
        0,
    ),
)
