syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__path__tests__it_matches_typed_args.snap
---
source: syn-state-machine/src/common_tokens/path.rs
expression: "crate::parse::<GenericArgs<Infallible>>(::quote::quote! { < T > })"
---
Ok(
    (
        GenericArgs(
            [
                Type(
                    NoBounds(
                        TypePath(
                            TypePath {
                                leading: false,
                                segments: [
                                    Simple {
                                        id: Id(
                                            Ident(
                                                T,
                                            ),
                                        ),
                                    },
                                ],
                            },
                        ),
                    ),
                ),
            ],
        ),
        0,
    ),
)
